# MiHeartbeat

./: LICENSE  README.md  device.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: heart.rs  lib.rs  main.rs  settings.rs  system.rs  window.rs
src/components/: Dialog.vue  TitleBar.vue
src/composables/: useDialog.js
src/routes/: index.js
src/utils/: image.js  window.js
src/views/: About.vue  DeviceView.vue  FloatingView.vue  FloatingWidget.vue  ListView.vue  Settings.vue  SplashView.vue
