[package]
name = "MiHeartbeat"
version = "1.0.1"
description = "手环心率广播桌面端"
authors = ["maybug"]
edition = "2021"

[lib]
name = "mi_heartbeat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.3"
#tauri-plugin-sql= { version = "2.0.0",features = ["sqlite"] }
dirs = "5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time"] }
bluest = "0.6.9"
futures-lite = "2.6.0"
tauri-plugin-os = "2"

